// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toggle renders correctly 1`] = `
<DocumentFragment>
  .cache-uo0qp6-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
}

.cache-uo0qp6-StyledLabel:active .e6hn8de2[data-disabled='false']:after {
  width: 22.04px;
}

.cache-uo0qp6-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-x4xq1y-StyledToggle {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 24px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #b2b6c3;
  width: 48px;
  height: 24px;
}

.cache-x4xq1y-StyledToggle:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100px;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.cache-x4xq1y-StyledToggle:focus-within,
.cache-x4xq1y-StyledToggle:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-x4xq1y-StyledToggle[data-disabled='false']:active:after {
  width: 22.04px;
}

.cache-x4xq1y-StyledToggle[data-checked='true'] {
  color: #151a2d;
  background-color: #4f0599;
}

.cache-x4xq1y-StyledToggle[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.cache-x4xq1y-StyledToggle[data-checked='true']:focus-within,
.cache-x4xq1y-StyledToggle[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-x4xq1y-StyledToggle[data-disabled='true'] {
  background: #d4dae7;
}

.cache-x4xq1y-StyledToggle[data-disabled='true'][data-checked='true'] {
  background: #bda5df;
}

.cache-1myp2ct-StyledCheckbox {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-1myp2ct-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<label
    aria-disabled="false"
    class="cache-uo0qp6-StyledLabel e6hn8de0"
  >
    <div
      class="cache-x4xq1y-StyledToggle e6hn8de2"
      data-checked="false"
      data-disabled="false"
    >
      <input
        aria-checked="false"
        aria-label="test"
        class="cache-1myp2ct-StyledCheckbox e6hn8de1"
        id="test"
        name="test"
        type="checkbox"
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle renders correctly label 1`] = `
<DocumentFragment>
  .cache-uo0qp6-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
}

.cache-uo0qp6-StyledLabel:active .e6hn8de2[data-disabled='false']:after {
  width: 22.04px;
}

.cache-uo0qp6-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-x4xq1y-StyledToggle {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 24px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #b2b6c3;
  width: 48px;
  height: 24px;
}

.cache-x4xq1y-StyledToggle:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100px;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.cache-x4xq1y-StyledToggle:focus-within,
.cache-x4xq1y-StyledToggle:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-x4xq1y-StyledToggle[data-disabled='false']:active:after {
  width: 22.04px;
}

.cache-x4xq1y-StyledToggle[data-checked='true'] {
  color: #151a2d;
  background-color: #4f0599;
}

.cache-x4xq1y-StyledToggle[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.cache-x4xq1y-StyledToggle[data-checked='true']:focus-within,
.cache-x4xq1y-StyledToggle[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-x4xq1y-StyledToggle[data-disabled='true'] {
  background: #d4dae7;
}

.cache-x4xq1y-StyledToggle[data-disabled='true'][data-checked='true'] {
  background: #bda5df;
}

.cache-1myp2ct-StyledCheckbox {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-1myp2ct-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<label
    aria-disabled="false"
    class="cache-uo0qp6-StyledLabel e6hn8de0"
  >
    <div
      class="cache-x4xq1y-StyledToggle e6hn8de2"
      data-checked="false"
      data-disabled="false"
    >
      <input
        aria-checked="false"
        aria-label="test"
        class="cache-1myp2ct-StyledCheckbox e6hn8de1"
        id="test"
        name="test"
        type="checkbox"
      />
    </div>
    This is a label
  </label>
</DocumentFragment>
`;

exports[`Toggle renders correctly when checked 1`] = `
<DocumentFragment>
  .cache-uo0qp6-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
}

.cache-uo0qp6-StyledLabel:active .e6hn8de2[data-disabled='false']:after {
  width: 22.04px;
}

.cache-uo0qp6-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-x4xq1y-StyledToggle {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 24px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #b2b6c3;
  width: 48px;
  height: 24px;
}

.cache-x4xq1y-StyledToggle:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100px;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.cache-x4xq1y-StyledToggle:focus-within,
.cache-x4xq1y-StyledToggle:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-x4xq1y-StyledToggle[data-disabled='false']:active:after {
  width: 22.04px;
}

.cache-x4xq1y-StyledToggle[data-checked='true'] {
  color: #151a2d;
  background-color: #4f0599;
}

.cache-x4xq1y-StyledToggle[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.cache-x4xq1y-StyledToggle[data-checked='true']:focus-within,
.cache-x4xq1y-StyledToggle[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-x4xq1y-StyledToggle[data-disabled='true'] {
  background: #d4dae7;
}

.cache-x4xq1y-StyledToggle[data-disabled='true'][data-checked='true'] {
  background: #bda5df;
}

.cache-1myp2ct-StyledCheckbox {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-1myp2ct-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<label
    aria-disabled="false"
    class="cache-uo0qp6-StyledLabel e6hn8de0"
  >
    <div
      class="cache-x4xq1y-StyledToggle e6hn8de2"
      data-checked="true"
      data-disabled="false"
    >
      <input
        aria-checked="true"
        aria-label="test"
        checked=""
        class="cache-1myp2ct-StyledCheckbox e6hn8de1"
        id="test"
        name="test"
        type="checkbox"
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle renders correctly when disabled 1`] = `
<DocumentFragment>
  .cache-uo0qp6-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
}

.cache-uo0qp6-StyledLabel:active .e6hn8de2[data-disabled='false']:after {
  width: 22.04px;
}

.cache-uo0qp6-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-x4xq1y-StyledToggle {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 24px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #b2b6c3;
  width: 48px;
  height: 24px;
}

.cache-x4xq1y-StyledToggle:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100px;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.cache-x4xq1y-StyledToggle:focus-within,
.cache-x4xq1y-StyledToggle:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-x4xq1y-StyledToggle[data-disabled='false']:active:after {
  width: 22.04px;
}

.cache-x4xq1y-StyledToggle[data-checked='true'] {
  color: #151a2d;
  background-color: #4f0599;
}

.cache-x4xq1y-StyledToggle[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.cache-x4xq1y-StyledToggle[data-checked='true']:focus-within,
.cache-x4xq1y-StyledToggle[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-x4xq1y-StyledToggle[data-disabled='true'] {
  background: #d4dae7;
}

.cache-x4xq1y-StyledToggle[data-disabled='true'][data-checked='true'] {
  background: #bda5df;
}

.cache-1myp2ct-StyledCheckbox {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-1myp2ct-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<label
    aria-disabled="true"
    class="cache-uo0qp6-StyledLabel e6hn8de0"
  >
    <div
      class="cache-x4xq1y-StyledToggle e6hn8de2"
      data-checked="false"
      data-disabled="true"
    >
      <input
        aria-checked="false"
        aria-label="test"
        class="cache-1myp2ct-StyledCheckbox e6hn8de1"
        disabled=""
        id="test"
        name="test"
        type="checkbox"
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle renders correctly when required with label 1`] = `
<DocumentFragment>
  .cache-uo0qp6-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
}

.cache-uo0qp6-StyledLabel:active .e6hn8de2[data-disabled='false']:after {
  width: 22.04px;
}

.cache-uo0qp6-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-x4xq1y-StyledToggle {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 24px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #b2b6c3;
  width: 48px;
  height: 24px;
}

.cache-x4xq1y-StyledToggle:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100px;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.cache-x4xq1y-StyledToggle:focus-within,
.cache-x4xq1y-StyledToggle:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-x4xq1y-StyledToggle[data-disabled='false']:active:after {
  width: 22.04px;
}

.cache-x4xq1y-StyledToggle[data-checked='true'] {
  color: #151a2d;
  background-color: #4f0599;
}

.cache-x4xq1y-StyledToggle[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.cache-x4xq1y-StyledToggle[data-checked='true']:focus-within,
.cache-x4xq1y-StyledToggle[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-x4xq1y-StyledToggle[data-disabled='true'] {
  background: #d4dae7;
}

.cache-x4xq1y-StyledToggle[data-disabled='true'][data-checked='true'] {
  background: #bda5df;
}

.cache-1myp2ct-StyledCheckbox {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-1myp2ct-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

.cache-1df1xfu-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: #a6102d;
  height: 10px;
  width: 10px;
  min-width: 10px;
  min-height: 10px;
}

<label
    aria-disabled="false"
    class="cache-uo0qp6-StyledLabel e6hn8de0"
  >
    <div
      class="cache-x4xq1y-StyledToggle e6hn8de2"
      data-checked="false"
      data-disabled="false"
    >
      <input
        aria-checked="false"
        aria-label="test"
        class="cache-1myp2ct-StyledCheckbox e6hn8de1"
        id="test"
        name="test"
        type="checkbox"
      />
    </div>
    test
    <sup>
      <svg
        class="cache-1df1xfu-StyledIcon-sizeStyles etwatq50"
        viewBox="0 0 24 24"
      >
        <path
          d="M10,2H14L13.21,9.91L19.66,5.27L21.66,8.73L14.42,12L21.66,15.27L19.66,18.73L13.21,14.09L14,22H10L10.79,14.09L4.34,18.73L2.34,15.27L9.58,12L2.34,8.73L4.34,5.27L10.79,9.91L10,2Z"
        />
      </svg>
    </sup>
  </label>
</DocumentFragment>
`;

exports[`Toggle renders correctly when required with label left 1`] = `
<DocumentFragment>
  .cache-uo0qp6-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
}

.cache-uo0qp6-StyledLabel:active .e6hn8de2[data-disabled='false']:after {
  width: 22.04px;
}

.cache-uo0qp6-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-1df1xfu-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: #a6102d;
  height: 10px;
  width: 10px;
  min-width: 10px;
  min-height: 10px;
}

.cache-x4xq1y-StyledToggle {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 24px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #b2b6c3;
  width: 48px;
  height: 24px;
}

.cache-x4xq1y-StyledToggle:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100px;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.cache-x4xq1y-StyledToggle:focus-within,
.cache-x4xq1y-StyledToggle:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-x4xq1y-StyledToggle[data-disabled='false']:active:after {
  width: 22.04px;
}

.cache-x4xq1y-StyledToggle[data-checked='true'] {
  color: #151a2d;
  background-color: #4f0599;
}

.cache-x4xq1y-StyledToggle[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.cache-x4xq1y-StyledToggle[data-checked='true']:focus-within,
.cache-x4xq1y-StyledToggle[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-x4xq1y-StyledToggle[data-disabled='true'] {
  background: #d4dae7;
}

.cache-x4xq1y-StyledToggle[data-disabled='true'][data-checked='true'] {
  background: #bda5df;
}

.cache-1myp2ct-StyledCheckbox {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-1myp2ct-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<label
    aria-disabled="false"
    class="cache-uo0qp6-StyledLabel e6hn8de0"
  >
    test
    <sup>
      <svg
        class="cache-1df1xfu-StyledIcon-sizeStyles etwatq50"
        viewBox="0 0 24 24"
      >
        <path
          d="M10,2H14L13.21,9.91L19.66,5.27L21.66,8.73L14.42,12L21.66,15.27L19.66,18.73L13.21,14.09L14,22H10L10.79,14.09L4.34,18.73L2.34,15.27L9.58,12L2.34,8.73L4.34,5.27L10.79,9.91L10,2Z"
        />
      </svg>
    </sup>
    <div
      class="cache-x4xq1y-StyledToggle e6hn8de2"
      data-checked="false"
      data-disabled="false"
    >
      <input
        aria-checked="false"
        aria-label="test"
        class="cache-1myp2ct-StyledCheckbox e6hn8de1"
        id="test"
        name="test"
        type="checkbox"
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle renders correctly with complex label 1`] = `
<DocumentFragment>
  .cache-uo0qp6-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
}

.cache-uo0qp6-StyledLabel:active .e6hn8de2[data-disabled='false']:after {
  width: 22.04px;
}

.cache-uo0qp6-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-x4xq1y-StyledToggle {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 24px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #b2b6c3;
  width: 48px;
  height: 24px;
}

.cache-x4xq1y-StyledToggle:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100px;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.cache-x4xq1y-StyledToggle:focus-within,
.cache-x4xq1y-StyledToggle:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-x4xq1y-StyledToggle[data-disabled='false']:active:after {
  width: 22.04px;
}

.cache-x4xq1y-StyledToggle[data-checked='true'] {
  color: #151a2d;
  background-color: #4f0599;
}

.cache-x4xq1y-StyledToggle[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.cache-x4xq1y-StyledToggle[data-checked='true']:focus-within,
.cache-x4xq1y-StyledToggle[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-x4xq1y-StyledToggle[data-disabled='true'] {
  background: #d4dae7;
}

.cache-x4xq1y-StyledToggle[data-disabled='true'][data-checked='true'] {
  background: #bda5df;
}

.cache-1myp2ct-StyledCheckbox {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-1myp2ct-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<label
    aria-disabled="false"
    class="cache-uo0qp6-StyledLabel e6hn8de0"
  >
    <div
      class="cache-x4xq1y-StyledToggle e6hn8de2"
      data-checked="false"
      data-disabled="false"
    >
      <input
        aria-checked="false"
        aria-label="test"
        class="cache-1myp2ct-StyledCheckbox e6hn8de1"
        id="test"
        name="test"
        type="checkbox"
      />
    </div>
    <span>
      Custom label rendered
    </span>
  </label>
</DocumentFragment>
`;

exports[`Toggle renders correctly with custom labels on right 1`] = `
<DocumentFragment>
  .cache-uo0qp6-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
}

.cache-uo0qp6-StyledLabel:active .e6hn8de2[data-disabled='false']:after {
  width: 22.04px;
}

.cache-uo0qp6-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-x4xq1y-StyledToggle {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 24px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #b2b6c3;
  width: 48px;
  height: 24px;
}

.cache-x4xq1y-StyledToggle:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100px;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.cache-x4xq1y-StyledToggle:focus-within,
.cache-x4xq1y-StyledToggle:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-x4xq1y-StyledToggle[data-disabled='false']:active:after {
  width: 22.04px;
}

.cache-x4xq1y-StyledToggle[data-checked='true'] {
  color: #151a2d;
  background-color: #4f0599;
}

.cache-x4xq1y-StyledToggle[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.cache-x4xq1y-StyledToggle[data-checked='true']:focus-within,
.cache-x4xq1y-StyledToggle[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-x4xq1y-StyledToggle[data-disabled='true'] {
  background: #d4dae7;
}

.cache-x4xq1y-StyledToggle[data-disabled='true'][data-checked='true'] {
  background: #bda5df;
}

.cache-1myp2ct-StyledCheckbox {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-1myp2ct-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<label
    aria-disabled="false"
    class="cache-uo0qp6-StyledLabel e6hn8de0"
  >
    <div
      class="cache-x4xq1y-StyledToggle e6hn8de2"
      data-checked="false"
      data-disabled="false"
    >
      <input
        aria-checked="false"
        aria-label="test"
        class="cache-1myp2ct-StyledCheckbox e6hn8de1"
        id="test"
        name="test"
        type="checkbox"
      />
    </div>
    This is a label
  </label>
</DocumentFragment>
`;

exports[`Toggle renders correctly with labels on left 1`] = `
<DocumentFragment>
  .cache-uo0qp6-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
}

.cache-uo0qp6-StyledLabel:active .e6hn8de2[data-disabled='false']:after {
  width: 22.04px;
}

.cache-uo0qp6-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-x4xq1y-StyledToggle {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 24px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #b2b6c3;
  width: 48px;
  height: 24px;
}

.cache-x4xq1y-StyledToggle:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100px;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.cache-x4xq1y-StyledToggle:focus-within,
.cache-x4xq1y-StyledToggle:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-x4xq1y-StyledToggle[data-disabled='false']:active:after {
  width: 22.04px;
}

.cache-x4xq1y-StyledToggle[data-checked='true'] {
  color: #151a2d;
  background-color: #4f0599;
}

.cache-x4xq1y-StyledToggle[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.cache-x4xq1y-StyledToggle[data-checked='true']:focus-within,
.cache-x4xq1y-StyledToggle[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-x4xq1y-StyledToggle[data-disabled='true'] {
  background: #d4dae7;
}

.cache-x4xq1y-StyledToggle[data-disabled='true'][data-checked='true'] {
  background: #bda5df;
}

.cache-1myp2ct-StyledCheckbox {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-1myp2ct-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<label
    aria-disabled="false"
    class="cache-uo0qp6-StyledLabel e6hn8de0"
  >
    This is a label
    <div
      class="cache-x4xq1y-StyledToggle e6hn8de2"
      data-checked="false"
      data-disabled="false"
    >
      <input
        aria-checked="false"
        aria-label="test"
        class="cache-1myp2ct-StyledCheckbox e6hn8de1"
        id="test"
        name="test"
        type="checkbox"
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle renders correctly with non default size 1`] = `
<DocumentFragment>
  .cache-9kpil1-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
}

.cache-9kpil1-StyledLabel:active .e6hn8de2[data-disabled='false']:after {
  width: 16.53px;
}

.cache-9kpil1-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-bod21w-StyledToggle {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 24px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #b2b6c3;
  width: 40px;
  height: 20px;
}

.cache-bod21w-StyledToggle:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 12px;
  height: 12px;
  border-radius: 100px;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.cache-bod21w-StyledToggle:focus-within,
.cache-bod21w-StyledToggle:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-bod21w-StyledToggle[data-disabled='false']:active:after {
  width: 16.53px;
}

.cache-bod21w-StyledToggle[data-checked='true'] {
  color: #151a2d;
  background-color: #4f0599;
}

.cache-bod21w-StyledToggle[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.cache-bod21w-StyledToggle[data-checked='true']:focus-within,
.cache-bod21w-StyledToggle[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-bod21w-StyledToggle[data-disabled='true'] {
  background: #d4dae7;
}

.cache-bod21w-StyledToggle[data-disabled='true'][data-checked='true'] {
  background: #bda5df;
}

.cache-1myp2ct-StyledCheckbox {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-1myp2ct-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<label
    aria-disabled="false"
    class="cache-9kpil1-StyledLabel e6hn8de0"
  >
    <div
      class="cache-bod21w-StyledToggle e6hn8de2"
      data-checked="false"
      data-disabled="false"
    >
      <input
        aria-checked="false"
        aria-label="test"
        class="cache-1myp2ct-StyledCheckbox e6hn8de1"
        id="test"
        name="test"
        type="checkbox"
      />
    </div>
  </label>
</DocumentFragment>
`;
